[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "tonutils"
description = "Python SDK for TON Blockchain — wallets, contracts, and more via ADNL and HTTP APIs."
requires-python = ">=3.10,<3.15"
authors = [
    { name = "nessshon" },
]
maintainers = [
    { name = "nessshon" },
]
dependencies = [
    "aiohttp>=3.9.0",
    "ton-core>=0.3.4",
]
keywords = [
    "ADNL",
    "AsyncIO",
    "SDK",
    "TON",
    "TON blockchain",
    "The Open Network",
    "blockchain",
    "crypto",
    "lite server",
    "smart contracts",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = ["version"]
readme = "README.md"
license = "MIT"

[project.scripts]
tonutils = "tonutils.cli:main"

[project.urls]
Homepage = "https://github.com/nessshon/tonutils/"
Examples = "https://github.com/nessshon/tonutils/tree/main/examples/"

[project.optional-dependencies]
test = [
    "environs>=11.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
]

[tool.setuptools.packages.find]
include = ["tonutils", "tonutils.*"]

[tool.setuptools.package-data]
tonutils = ["py.typed"]

[tool.setuptools.dynamic]
version = { attr = "tonutils.__meta__.__version__" }

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_test_loop_scope = "session"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    # pydocstyle
    "D",
    # pycodestyle
    "E",
    "W",
    # pyflakes
    "F",
    # isort
    "I",
    # flake8-bugbear
    "B",
    # flake8-comprehensions
    "C4",
    # pyupgrade
    "UP",
    # flake8-simplify
    "SIM",
    # type-checking imports
    "TCH",
    # perflint
    "PERF",
    # flake8-debugger
    "T10",
    # flake8-print
    "T20",
    # flake8-pie
    "PIE",
    # pylint errors
    "PLE",
    # flake8-return
    "RET",
    # ruff-specific
    "RUF",
    # flake8-bandit (security)
    "S",
]
ignore = [
    # docstring in public module
    "D100",
    # docstring in public package
    "D104",
    # docstring in magic method
    "D105",
    # docstring in __init__
    "D107",
    # blank line before class docstring (conflicts D211)
    "D203",
    # multi-line summary second line (conflicts D212)
    "D213",
    # assert usage (acceptable in non-web SDK for internal invariants)
    "S101",
    # binding to all interfaces (required for UDP transport)
    "S104",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"examples/*" = ["T201", "D"]
"tests/*" = ["D", "S101"]

[tool.ruff.lint.isort]
known-first-party = ["tonutils"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
strict = true
pretty = true
show_error_codes = true
show_error_context = true
namespace_packages = true
follow_imports_for_stubs = true
warn_unreachable = true
enable_error_code = [
    "ignore-without-code",
    "redundant-cast",
    "truthy-bool",
]